# primordialmachine-v1

./: .gitattributes  .gitignore  CMakeLists.txt  PrimordialMachine.cmake  README.md  appveyor.yml  backup.ps1  building-under-visual-studio-2022-windows-11.md  building-using-cmake-visual-studio-2022-windows-11.md  clean.ps1
Ring1/: CMakeLists.txt  Ring1.sln  appveyor.yml
Ring1/Ring1/: CMakeLists.txt  Ring1.vcxproj  Ring1.vcxproj.filters
Ring1/Ring1.Ap.Test/: CMakeLists.txt  Ring1.Ap.Test.vcxproj  Ring1.Ap.Test.vcxproj.filters
Ring1/Ring1.Atom.Test/: CMakeLists.txt  Ring1.Atom.Test.vcxproj  Ring1.Atom.Test.vcxproj.filters
Ring1/Ring1.Console.Demo/: CMakeLists.txt  Ring1.Console.Demo.vcxproj
Ring1/Ring1.FileSystem.Test/: CMakeLists.txt  Ring1.FileSystem.Test.vcxproj  Ring1.FileSystem.Test.vcxproj.filters
Ring1/Ring1.Intrinsic.Test/: CMakeLists.txt  Ring1.Intrinsic.Test.vcxproj  Ring1.Intrinsic.Test.vcxproj.filters
Ring1/Ring1.Log.Demo/: CMakeLists.txt  Ring1.Log.Demo.vcxproj  Ring1.Log.Demo.vcxproj.filters
Ring1/Ring1.Object.Test/: Ring1.Object.Test.vcxproj  Ring1.Object.Test.vcxproj.filters
Ring1/Ring1.TypeName.Test/: CMakeLists.txt  Ring1.TypeName.Test.vcxproj  Ring1.TypeName.Test.vcxproj.filters
Ring1/Ring1/Mkx/: Closure.c  Closure.h  CommandLine.c  CommandLine.h  Object.c  Object.h
Ring1/Ring1/Mkx/CommandLine/: Argument.c  Argument.h  ArgumentList.c  ArgumentList.h  Configuration.h  Parser.c  Parser.h
Ring1/Ring1/Mkx/Intrinsic/: README.md
Ring1/Ring1/Mkx/Object/: ArrayType.c  ArrayType.h  ArrayType.internal.c  ArrayType.internal.h  BoxedValue.c  BoxedValue.h  BoxedValue.i  ClassType.c  ClassType.h  ClassType.internal.c  ClassType.internal.h  Dispatch.c  Dispatch.h  EnumerationType.c  EnumerationType.h  EnumerationType.internal.c  EnumerationType.internal.h  Interface.c  Interface.h  Interface.internal.c  Interface.internal.h  InterfaceImplementation.h  InterfaceType.c  InterfaceType.h  InterfaceType.internal.c  InterfaceType.internal.h  MemoryManager.c  MemoryManager.h  Object.c  Object.h  ScalarType.c  ScalarType.h  ScalarType.internal.c  ScalarType.internal.h  ScalarTypes.c  ScalarTypes.h  ScalarTypes.i  Type.c  Type.h  Type.internal.c  (+11 more)
Ring1/Ring1/Ring1/: Assertions.c  Assertions.h  ByteBuffer.c  ByteBuffer.h  Console.c  Console.h  Conversion.c  Conversion.h  Hash.c  Hash.h  Intrinsic.c  Intrinsic.h  Log.c  Log.h  Memory.c  Memory.h  Result.h  Ring1.h  Status.c  Status.h  Test.c  Test.h  ThreadLocal.h  Time.c  TypeDescriptor.c  TypeDescriptor.h  _Include.c  _Include.h
Ring1/Ring1/Ring1/All/: _Include.c  _Include.h
Ring1/Ring1/Ring1/Annotations/: CheckReturn.h  Deprecated.h  NoReturn.h  _Include.h
Ring1/Ring1/Ring1/Ap/: ApBool.h  ApInt.c  ApInt.h  ApNat.c  ApNat.h  ApNat.private.c  _Include.c
Ring1/Ring1/Ring1/Atom/: _Include.c  _Include.h
Ring1/Ring1/Ring1/Collections/: Callbacks.h  InlineArray.c  InlineArray.h  PointerDeque.c  PointerHashMap.c  PointerHashMap.h  PointerList.c  PointerList.h  _Include.h
Ring1/Ring1/Ring1/Conversion/: _Buffer.c  (+7 more)
Ring2/Ring2.Library.Test/: CMakeLists.txt  Ring2.Library.Test.vcxproj.filters
Ring3/: CMakeLists.txt  README.md  Ring3.sln  appveyor.yml
Ring3/Ring3.Audials/: CMakeLists.txt  Ring3.Audials.vcxproj  Ring3.Audials.vcxproj.filters
Ring3/Ring3.Audials.Demo/: CMakeLists.txt
Ring3/Ring3.Fonts.FreeType2/: CMakeLists.txt  Ring3.Fonts.FreeType2.vcxproj  Ring3.Fonts.FreeType2.vcxproj.filters
Ring3/Ring3.Gdl/: CMakeLists.txt  Ring3.Gdl.vcxproj  Ring3.Gdl.vcxproj.filters
Ring3/Ring3.Gdl.Test/: CMakeLists.txt  Ring3.Gdl.Test.vcxproj  Ring3.Gdl.Test.vcxproj.filters
Ring3/Ring3.Graphics2/: CMakeLists.txt  Ring3.Graphics2.vcxproj  Ring3.Graphics2.vcxproj.filters
Ring3/Ring3.Gui/: CMakeLists.txt  Ring3.Gui.vcxproj  Ring3.Gui.vcxproj.filters
Ring3/Ring3.ImagesTranscoders.LibPng/: CMakeLists.txt  Ring3.ImagesTranscoders.LibPng.vcxproj  Ring3.ImagesTranscoders.LibPng.vcxproj.filters
Ring3/Ring3.Input/: CMakeLists.txt  Ring3.Input.vcxproj  Ring3.Input.vcxproj.filters
Ring3/Ring3.Launcher/: CMakeLists.txt  Ring3.Launcher.vcxproj  Ring3.Launcher.vcxproj.filters
Ring3/Ring3.Math/: CMakeLists.txt  Ring3.Math-Scribe.ps1  Ring3.Math.vcxproj  Ring3.Math.vcxproj.filters
Ring3/Ring3.Math.Test/: CMakeLists.txt
Ring3/Ring3.Math/@toport/: Ray-v1.c.t  Ray-v1.h.t  Rotate.h
Ring3/Ring3.Signals/: CMakeLists.txt  Ring3.Signals.vcxproj  Ring3.Signals.vcxproj.filters
Ring3/Ring3.Text/: CMakeLists.txt  Ring3.Text.vcxproj  Ring3.Text.vcxproj.filters
Ring3/Ring3.Visuals/: CMakeLists.txt  Ring3.Visuals.vcxproj  Ring3.Visuals.vcxproj.filters
Ring3/Ring3.Visuals.Gl/: CMakeLists.txt  Ring3.Visuals.Gl.vcxproj  Ring3.Visuals.Gl.vcxproj.filters
Ring4/Ring4.Demos/: CMakeLists.txt  Ring4.Demos.vcxproj  Ring4.Demos.vcxproj.filters
Scribe/: CMakeLists.txt  Scribe.sln
Scribe/Interpreter.Library/: CMakeLists.txt  Interpreter.Library.vcxproj  Interpreter.Library.vcxproj.filters
Scribe/Scribe/: CMakeLists.txt  README.md  Scribe.vcxproj  Scribe.vcxproj.filters
Scribe/Scribe.Cas/: CMakeLists.txt  Scribe.Cas.vcxproj  Scribe.Cas.vcxproj.filters
Scribe/Scribe.Cas.Test/: CMakeLists.txt  Scribe.Cas.Test.vcxproj  Scribe.Cas.Test.vcxproj.filters
Scribe/Scribe.Core/: CMakeLists.txt  Scribe.Core.vcxproj  Scribe.Core.vcxproj.filters
Scribe/Scribe.Template/: CMakeLists.txt  Scribe.Template.vcxproj  Scribe.Template.vcxproj.filters
Scribe/Scribe.Template.Test/: CMakeLists.txt  Scribe.Template.Test.vcxproj  Scribe.Template.Test.vcxproj.filters
Scribe/Scribe.Template.Test/Data/: RunTest.ps1
ring1/Ring1/: CMakeLists.txt  Ring1.vcxproj  Ring1.vcxproj.filters
ring1/Ring1.Console.Demo/: CMakeLists.txt  Ring1.Console.Demo.vcxproj.filters
ring1/Ring1/Ring1/: Atom.c  Atom.h  ByteBuffer.c  ByteBuffer.h  Conversion.c  Conversion.h  FileSystem.c  FileSystem.h  Hash.c  Hash.h  InlineArray.c  InlineArray.h  Intrinsic.h  Memory.c  Memory.h  Module.c  Module.h  ReferenceCounter.c  ReferenceCounter.h  Result.c  Result.h  Ring1.c  Ring1.h  Status.h  Test.c  Test.h  Time.c  Time.h  TypeDescriptor.c  TypeDescriptor.h  _Include.h
(+3060 files in other folders)
