# Copyright (c) 2022 Michael Heilmann. All rights reserved.
cmake_minimum_required(VERSION 3.20)

add_subdirectory("Ring1")
add_subdirectory("Ring1.Ap.Test")
add_subdirectory("Ring1.Atom.Test")
add_subdirectory("Ring1.Console.Demo")
add_subdirectory("Ring1.Intrinsic.Test")
add_subdirectory("Ring1.TypeName.Test")
