# Copyright (c) 2022 Michael Heilmann. All rights reserved.
cmake_minimum_required(VERSION 3.20)

add_subdirectory("Ring3.Gdl")
add_subdirectory("Ring3.Gdl.Test")
add_subdirectory("Ring3.Gui")
add_subdirectory("Ring3.Math")
add_subdirectory("Ring3.Math.Test")
add_subdirectory("Ring3.Signals")
add_subdirectory("Ring3.Input")
add_subdirectory("Ring3.Visuals")
add_subdirectory("Ring3.Visuals.Gl")
add_subdirectory("Ring3.Audials")
add_subdirectory("Ring3.Audials.Demo")
add_subdirectory("Ring3.Graphics2")
add_subdirectory("Ring3.Text")
