# Copyright (c) 2022 Michael Heilmann. All rights reserved.
cmake_minimum_required(VERSION 3.20)

add_subdirectory("Interpreter.Library")
add_subdirectory("Scribe.Core")
add_subdirectory("Scribe.Cas")
add_subdirectory("Scribe.Cas.Test")
add_subdirectory("Scribe.Template")
add_subdirectory("Scribe.Template.Test")
add_subdirectory("Scribe")
